<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitario Celta</string>
    <string name="aboutText">Acerca de</string>
    <string name="reiniciarText">Reiniciar la partida</string>
    <string name="guardarText">Guardar la partida</string>
    <string name="guardarPuntText">Guardar puntuación</string>
    <string name="mejoresResultText">Ver mejores resultados</string>
    <string name="recuperarText">Recuperar partida</string>
    <string name="aboutMessage">El juego consiste en ir comiendo piezas
    (en horizontal o en vertical) hasta conseguir que sólo quede una pieza
    en el centro. Una pieza puede saltar a la adyacente, de manera que la elimina.</string>
    <string name="firstCategoryPrefTitle">Datos personales</string>
    <string name="editTextPrefTitle">Nombre del jugador</string>
    <string name="editTextPrefSummary">Pulse para teclear el nombre del jugador</string>
    <string name="secondCategoryPrefTitle">Ajustes del juego</string>
    <string name="preferencesText">Ajustes</string>
    <string name= "txtFicheroEscrito">Se ha escrito en el fichero de partida.</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">¡Final!</string>
    <string name="txtDialogoFinalPregunta">¿Quiere jugar otra partida?</string>
    <string name="txtDialogoFinalAfirmativo">Sí</string>
    <string name="txtDialogoFinalNegativo">No</string>

    <!-- Título categoría -->
    <string name="key_Categoría">opc_Fichero</string>
    <string name="title_Categoría">OPCIONES DE ALMACENAMIENTO</string>

    <!-- Nombre del fichero -->
    <string name="key_NombreFichero"></string>
    <string name="title_NombreFichero">solitariocelta-partida.txt</string>
    <string name="txtFicheroVacio">El fichero está vacío</string>


    <!-- Tarjeta SD -->
    <string name="key_TarjetaSD">utilizarTarjetaSD</string>
    <bool   name="default_prefTarjetaSD">false</bool>
    <string name="txtPrefTarjetaSD">Almacenamiento en tarjeta SD</string>
    <string name="txtPrefTarjetaSDExplicación">
                Si se activa esta opción se almacenará la información
                en la tarjeta SD (si está disponible)
        </string>
    <string name="txtErrorMemExterna">La memoria externa no está disponible</string>

    <string name="borrarMejores">Borrar las puntuaciones</string>
    <string name="salvarPartidaHint">Nombre del jugador</string>

    <!-- Borrar puntuaciones -->
    <string name="toastBorrarPuntuaciones">Puntuaciones borradas</string>

    <!-- Guardar Partida -->
    <string name="guardarPartidaDialogTitle">Guardar partida</string>
    <string name="SiGuardarDialogOption">Guardar</string>
    <string name="NoGuardarDialogOption">Cancelar</string>
    <string name="toastPartidaGuardada">Partida guardada</string>
    <string name="toastNoPartidasGuardadas">No existen partidas guardadas</string>

    <!-- Cargar Partida Dialog -->
    <string name="toastCargarPartida">Partida recuperada</string>
    <string name="CargarPartidaDialogTitle">Recuperar partida</string>
    <string name="SiCargarDialogOption">Sí</string>
    <string name="NoCargarDialogOption">No</string>

    <!-- Salvar puntuacion Dialog -->
    <string name="salvarPuntuacionDialogTitle">Guardar puntuación</string>
    <string name="SiSalvarPuntuacionDialogOption">Guardar</string>
    <string name="NoSalvarPuntuacionDialogOption">Cancelar</string>
    <string name="toastSalvarPuntuacion">Puntuación salvada, nos quedamos con tu cara</string>


</resources>