<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/preferencesText"/>
    <item
        android:id="@+id/menuAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="200"
        android:title="@string/aboutText"/>
    <item
        android:id="@+id/menuReiniciar"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="200"
        android:title="@string/reiniciarText"/>

    <item
        android:id="@+id/menuGuardar"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="200"
        android:title="@string/guardarText"/>

    <item
        android:id="@+id/menuRecuperar"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="200"
        android:title="@string/recuperarText"/>


    <item
        android:id="@+id/menuMejoresResultados"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="200"
        android:title="@string/mejoresResultText"/>

</menu>